dummy text change and left align

--- a/index.html
+++ b/index.html
@@ -484,8 +484,7 @@ neque eget"</p>
       <div class="newsletter-text">
         <h3>Subcribe our Newsletter</h3>
         <p>
-          Pellentesque eu nibh eget mauris congue mattis mattis nec tellus.
-          Phasellus imperdiet elit eu magna.
+          GroupBuyHive brings people together to unlock big savings through collective buying. Join group deals, access premium products at lower prices, and shop smarter as a community
         </p>
       </div>
       <form>
