--- a/index.html
+++ b/index.html
@@ -24,23 +24,25 @@
     </div>
 
     <ul class="nav-links" id="nav-menu">
-        <li><a href="#hero">Home</a></li>
-        <li><a href="#account">Buy In Bulk</a></li>
-        <li><a href="#vendor">Sell In Bulk</a></li>
-        <li><a href="#footer">Contact Us</a></li>
+        <li ><a href="#hero">Home</a></li>
+        <li ><a href="#account">Buy In Bulk</a></li>
+        <li ><a href="#vendor">Sell In Bulk</a></li>
+        <li ><a href="#footer">Contact Us</a></li>
+    
+        <!-- Desktop Buttons -->
+       
+
         <!-- Mobile Buttons -->
         <li class="mobile-buttons">
+            <a class="shop-btn" href="https://www.farm2flat.com/" target="_blank">Shop Now</a>
             <a class="vendor-btn" href="https://calendar.app.google/XHTG4JFheYZA5wYN9" target="_blank">Vendor Demo</a>
-            <a class="login-btn" href="#" target="_blank">
+            <a class="login-btn" href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                   <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
                 </svg>
             </a>
         </li>
     </ul>
-
-    <!-- Desktop Buttons -->
-   
 </nav>
 
 
@@ -149,8 +151,8 @@ essentials.</p>
             <li>Track orders, deliveries, and savings in one place</li>
             <li>Enjoy exclusive member offers and seasonal deals</li><br><br>
           </ul>
-          <button onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSfWKtD5YNqk_dIHGP7dhnHtzC30GkIEXGATKpr1hhgqxhiF8w/viewform?usp=sharing&ouid=105399961375585334753', '_blank')">
-Get Started</button>
+          <button onclick="window.open('https://www.farm2flat.com/', '_blank')">
+Shop Now</button>
         </div>
       </div>
     </div>
